Changed the "$(( LINENO +/- ))" presentation and fixed some potential bugs

--- a/install/.Bash-utils/config/modules/Hardware/module.conf
+++ b/install/.Bash-utils/config/modules/Hardware/module.conf
@@ -35,7 +35,7 @@ __BU_HARDWARE_MODULE_CONF_DIR_PATH="$(BU.ModuleInit.FindPath "${__BU_MODULE_INIT
 
 # Bash Utils "Hardware" module's library directory                                                  |   Default parent folder --> "${__BU_MAIN_MODULE_LIB_FUNCTS_DIR_PATH}/" (Bash-utils/lib/functions).
 __BU_HARDWARE_MODULE_LIB_MOD_DIR_PATH="$(BU.ModuleInit.FindPath "${__BU_MAIN_MODULE_LIB_FUNCTS_DIR_PATH}" "$(BU.ModuleInit.GetModuleName "${BASH_SOURCE[0]}")" 'd')"  || { printf "IN « %s », LINE « %s » --> BASH-UTILS ERROR : Unable to define the path to store in the « %s » global variable\n"  "${BASH_SOURCE[0]}" "${LINENO}" '$__BU_HARDWARE_MODULE_LIB_MOD_DIR_PATH'; BU.ModuleInit.MsgAbort; BU.ModuleInit.AskPrintLog; BU.ModuleInit.IsInScript && exit 1; return 1; };
-BU.ModuleInit.DisplayInitGlobalVarsInfos '__BU_HARDWARE_MODULE_LIB_MOD_DIR_PATH' "${__BU_HARDWARE_MODULE_LIB_MOD_DIR_PATH}"                                       'Dirpath' "This global variable stores the path of the « Hardware » module's functions folder"                                  "${BASH_SOURCE[0]}" "${FUNCNAME[0]}" "$(( LINENO-1 ))";
+BU.ModuleInit.DisplayInitGlobalVarsInfos '__BU_HARDWARE_MODULE_LIB_MOD_DIR_PATH' "${__BU_HARDWARE_MODULE_LIB_MOD_DIR_PATH}"                                       'Dirpath' "This global variable stores the path of the « Hardware » module's functions folder"                                  "${BASH_SOURCE[0]}" "${FUNCNAME[0]}" "$(( LINENO - 1 ))";
 
 # -----------------------------------------------
 
@@ -81,10 +81,10 @@ if BU.Main.OS.IsBSD; then
     BU.ModuleInit.Msg "Operating system : $[v_hardware_modinit_bsd_sys]"; BU.ModuleInit.Msg;
 
     __BU_HARDWARE_MODULE_LIB_MOD_DIR_PATH_INFO="$(BU.ModuleInit.FindPath "${__BU_HARDWARE_MODULE_LIB_MOD_DIR_PATH}" "BSD" 'd')";
-    BU.ModuleInit.DisplayInitGlobalVarsInfos '__BU_HARDWARE_MODULE_LIB_MOD_DIR_PATH_INFO' "${__BU_HARDWARE_MODULE_LIB_MOD_DIR_PATH_INFO}" 'Dirpath' "This variable stores the path to the folder containing the library files needed for the $(BU.Main.Decho.Decho.Path "Hardware") module and designed for the current operating system."                                "${BASH_SOURCE[0]}" "${FUNCNAME[0]}" "$(( LINENO-1 ))"
+    BU.ModuleInit.DisplayInitGlobalVarsInfos '__BU_HARDWARE_MODULE_LIB_MOD_DIR_PATH_INFO' "${__BU_HARDWARE_MODULE_LIB_MOD_DIR_PATH_INFO}" 'Dirpath' "This variable stores the path to the folder containing the library files needed for the $(BU.Main.Decho.Decho.Path "Hardware") module and designed for the current operating system."                                "${BASH_SOURCE[0]}" "${FUNCNAME[0]}" "$(( LINENO - 1 ))";
 
     __BU_HARDWARE_MODULE_FUNCTIONS_FILES_PATH_ARRAY=("${__BU_HARDWARE_MODULE_LIB_MOD_DIR_PATH_INFO}/"*.lib);
-    BU.ModuleInit.DisplayInitGlobalVarsInfos '__BU_HARDWARE_MODULE_FUNCTIONS_FILES_PATH_ARRAY' "" 'Array' "This array stores the path of each « .lib » library file in the functions folder of the $(BU.Main.Decho.Decho.Path "Hardware") module according to the current operating system (Current OS : ${v_hardware_modinit_bsd_sys}) TO SOURCE (NOT SOURCED YET)"      "${BASH_SOURCE[0]}" "${FUNCNAME[0]}" "$(( LINENO-1 ))" "${__BU_HARDWARE_MODULE_FUNCTIONS_FILES_PATH_ARRAY[@]}";
+    BU.ModuleInit.DisplayInitGlobalVarsInfos '__BU_HARDWARE_MODULE_FUNCTIONS_FILES_PATH_ARRAY' "" 'Array' "This array stores the path of each « .lib » library file in the functions folder of the $(BU.Main.Decho.Decho.Path "Hardware") module according to the current operating system (Current OS : ${v_hardware_modinit_bsd_sys}) TO SOURCE (NOT SOURCED YET)"      "${BASH_SOURCE[0]}" "${FUNCNAME[0]}" "$(( LINENO - 1 ))" "${__BU_HARDWARE_MODULE_FUNCTIONS_FILES_PATH_ARRAY[@]}";
 
     unset v_hardware_modinit_bsd_sys;
 fi
@@ -93,30 +93,30 @@ BU.Main.OS.IsHaiku && {
     BU.ModuleInit.Msg "Operating system : Haiku"; BU.ModuleInit.Msg;
 
     __BU_HARDWARE_MODULE_LIB_MOD_DIR_PATH_INFO="$(BU.ModuleInit.FindPath "${__BU_HARDWARE_MODULE_LIB_MOD_DIR_PATH}" "Haiku" 'd')";
-    BU.ModuleInit.DisplayInitGlobalVarsInfos '__BU_HARDWARE_MODULE_LIB_MOD_DIR_PATH_INFO' "${__BU_HARDWARE_MODULE_LIB_MOD_DIR_PATH_INFO}" 'Dirpath' "This variable stores the path to the folder containing the library files needed for the $(BU.Main.Decho.Decho.Path "Hardware") module and designed for the current operating system."                                "${BASH_SOURCE[0]}" "${FUNCNAME[0]}" "$(( LINENO-1 ))"
+    BU.ModuleInit.DisplayInitGlobalVarsInfos '__BU_HARDWARE_MODULE_LIB_MOD_DIR_PATH_INFO' "${__BU_HARDWARE_MODULE_LIB_MOD_DIR_PATH_INFO}" 'Dirpath' "This variable stores the path to the folder containing the library files needed for the $(BU.Main.Decho.Decho.Path "Hardware") module and designed for the current operating system."                                "${BASH_SOURCE[0]}" "${FUNCNAME[0]}" "$(( LINENO - 1 ))";
 
     __BU_HARDWARE_MODULE_FUNCTIONS_FILES_PATH_ARRAY=("${__BU_HARDWARE_MODULE_LIB_MOD_DIR_PATH_INFO}/"*.lib);
-    BU.ModuleInit.DisplayInitGlobalVarsInfos '__BU_HARDWARE_MODULE_FUNCTIONS_FILES_PATH_ARRAY' "" 'Array' "This array stores the path of each « .lib » library file in the functions folder of the $(BU.Main.Decho.Decho.Path "Hardware") module according to the current operating system (Current OS : Linux) TO SOURCE (NOT SOURCED YET)"                            "${BASH_SOURCE[0]}" "${FUNCNAME[0]}" "$(( LINENO-1 ))" "${__BU_HARDWARE_MODULE_FUNCTIONS_FILES_PATH_ARRAY[@]}";
+    BU.ModuleInit.DisplayInitGlobalVarsInfos '__BU_HARDWARE_MODULE_FUNCTIONS_FILES_PATH_ARRAY' "" 'Array' "This array stores the path of each « .lib » library file in the functions folder of the $(BU.Main.Decho.Decho.Path "Hardware") module according to the current operating system (Current OS : Linux) TO SOURCE (NOT SOURCED YET)"                            "${BASH_SOURCE[0]}" "${FUNCNAME[0]}" "$(( LINENO - 1 ))" "${__BU_HARDWARE_MODULE_FUNCTIONS_FILES_PATH_ARRAY[@]}";
 }
 
 BU.Main.OS.IsLinux && {
     BU.ModuleInit.Msg "Operating system : Linux"; BU.ModuleInit.Msg;
 
     __BU_HARDWARE_MODULE_LIB_MOD_DIR_PATH_INFO="$(BU.ModuleInit.FindPath "${__BU_HARDWARE_MODULE_LIB_MOD_DIR_PATH}" "Linux" 'd')";
-    BU.ModuleInit.DisplayInitGlobalVarsInfos '__BU_HARDWARE_MODULE_LIB_MOD_DIR_PATH_INFO' "${__BU_HARDWARE_MODULE_LIB_MOD_DIR_PATH_INFO}" 'Dirpath' "This variable stores the path to the folder containing the library files needed for the $(BU.Main.Decho.Decho.Path "Hardware") module and designed for the current operating system."                                "${BASH_SOURCE[0]}" "${FUNCNAME[0]}" "$(( LINENO-1 ))"
+    BU.ModuleInit.DisplayInitGlobalVarsInfos '__BU_HARDWARE_MODULE_LIB_MOD_DIR_PATH_INFO' "${__BU_HARDWARE_MODULE_LIB_MOD_DIR_PATH_INFO}" 'Dirpath' "This variable stores the path to the folder containing the library files needed for the $(BU.Main.Decho.Decho.Path "Hardware") module and designed for the current operating system."                                "${BASH_SOURCE[0]}" "${FUNCNAME[0]}" "$(( LINENO - 1 ))";
 
     __BU_HARDWARE_MODULE_FUNCTIONS_FILES_PATH_ARRAY=("${__BU_HARDWARE_MODULE_LIB_MOD_DIR_PATH_INFO}/"*.lib);
-    BU.ModuleInit.DisplayInitGlobalVarsInfos '__BU_HARDWARE_MODULE_FUNCTIONS_FILES_PATH_ARRAY' "" 'Array' "This array stores the path of each « .lib » library file in the functions folder of the $(BU.Main.Decho.Decho.Path "Hardware") module according to the current operating system (Current OS : Linux) TO SOURCE (NOT SOURCED YET)"                            "${BASH_SOURCE[0]}" "${FUNCNAME[0]}" "$(( LINENO-1 ))" "${__BU_HARDWARE_MODULE_FUNCTIONS_FILES_PATH_ARRAY[@]}";
+    BU.ModuleInit.DisplayInitGlobalVarsInfos '__BU_HARDWARE_MODULE_FUNCTIONS_FILES_PATH_ARRAY' "" 'Array' "This array stores the path of each « .lib » library file in the functions folder of the $(BU.Main.Decho.Decho.Path "Hardware") module according to the current operating system (Current OS : Linux) TO SOURCE (NOT SOURCED YET)"                            "${BASH_SOURCE[0]}" "${FUNCNAME[0]}" "$(( LINENO - 1 ))" "${__BU_HARDWARE_MODULE_FUNCTIONS_FILES_PATH_ARRAY[@]}";
 }
 
 BU.Main.OS.IsOSX && {
     BU.ModuleInit.Msg "Operating system : Mac OSX"; BU.ModuleInit.Msg;
 
     __BU_HARDWARE_MODULE_LIB_MOD_DIR_PATH_INFO="$(BU.ModuleInit.FindPath "${__BU_HARDWARE_MODULE_LIB_MOD_DIR_PATH}" "OSX" 'd')";
-    BU.ModuleInit.DisplayInitGlobalVarsInfos '__BU_HARDWARE_MODULE_LIB_MOD_DIR_PATH_INFO' "${__BU_HARDWARE_MODULE_LIB_MOD_DIR_PATH_INFO}" 'Dirpath' "This variable stores the path to the folder containing the library files needed for the $(BU.Main.Decho.Decho.Path "Hardware") module and designed for the current operating system."                                "${BASH_SOURCE[0]}" "${FUNCNAME[0]}" "$(( LINENO-1 ))"
+    BU.ModuleInit.DisplayInitGlobalVarsInfos '__BU_HARDWARE_MODULE_LIB_MOD_DIR_PATH_INFO' "${__BU_HARDWARE_MODULE_LIB_MOD_DIR_PATH_INFO}" 'Dirpath' "This variable stores the path to the folder containing the library files needed for the $(BU.Main.Decho.Decho.Path "Hardware") module and designed for the current operating system."                                "${BASH_SOURCE[0]}" "${FUNCNAME[0]}" "$(( LINENO - 1 ))";
 
     __BU_HARDWARE_MODULE_FUNCTIONS_FILES_PATH_ARRAY=("${__BU_HARDWARE_MODULE_LIB_MOD_DIR_PATH_INFO}/"*.lib);
-    BU.ModuleInit.DisplayInitGlobalVarsInfos '__BU_HARDWARE_MODULE_FUNCTIONS_FILES_PATH_ARRAY' "" 'Array' "This array stores the path of each « .lib » library file in the functions folder of the $(BU.Main.Decho.Decho.Path "Hardware") module according to the current operating system (Current OS : Linux) TO SOURCE (NOT SOURCED YET)"                            "${BASH_SOURCE[0]}" "${FUNCNAME[0]}" "$(( LINENO-1 ))" "${__BU_HARDWARE_MODULE_FUNCTIONS_FILES_PATH_ARRAY[@]}";
+    BU.ModuleInit.DisplayInitGlobalVarsInfos '__BU_HARDWARE_MODULE_FUNCTIONS_FILES_PATH_ARRAY' "" 'Array' "This array stores the path of each « .lib » library file in the functions folder of the $(BU.Main.Decho.Decho.Path "Hardware") module according to the current operating system (Current OS : Linux) TO SOURCE (NOT SOURCED YET)"                            "${BASH_SOURCE[0]}" "${FUNCNAME[0]}" "$(( LINENO - 1 ))" "${__BU_HARDWARE_MODULE_FUNCTIONS_FILES_PATH_ARRAY[@]}";
 }
 
 # If the module is loaded on an unsupported OS. <-- TODO
@@ -140,7 +140,7 @@ if [ -z "${__BU_HARDWARE_MODULE_LIB_MOD_DIR_PATH_INFO}" ] || [ -z "${__BU_HARDWA
 
 # It MUST NOT store any value now, it will be processed in the Hardware module's initializer file.
 __BU_HARDWARE_MODULE_MODIFIED_STATUS_VARS_ARRAY=();
-BU.ModuleInit.DisplayInitGlobalVarsInfos '__BU_HARDWARE_MODULE_MODIFIED_STATUS_VARS_ARRAY' "" 'Array' "This array (MUST BE EMPTY BY DEFAULT) stores the global status variables values modified as the « Hardware » module's by the user" "${BASH_SOURCE[0]}" "${FUNCNAME[0]}" "$(( LINENO-1 ))";
+BU.ModuleInit.DisplayInitGlobalVarsInfos '__BU_HARDWARE_MODULE_MODIFIED_STATUS_VARS_ARRAY' "" 'Array' "This array (MUST BE EMPTY BY DEFAULT) stores the global status variables values modified as the « Hardware » module's by the user" "${BASH_SOURCE[0]}" "${FUNCNAME[0]}" "$(( LINENO - 1 ))";
 
 # -----------------------------------------------
 
@@ -148,7 +148,7 @@ BU.ModuleInit.DisplayInitGlobalVarsInfos '__BU_HARDWARE_MODULE_MODIFIED_STATUS_V
 
 # Defining an associative array to store each sourced library file's path.
 __BU_HARDWARE_MODULE_LIB_FILES_PATH_ARRAY=();
-BU.ModuleInit.DisplayInitGlobalVarsInfos '__BU_HARDWARE_MODULE_LIB_FILES_PATH_ARRAY' "" 'Array' "This array (MUST BE EMPTY BY DEFAULT) stores the path of each SOURCED « Hardware » module's library files" "${BASH_SOURCE[0]}" "${FUNCNAME[0]}" "$(( LINENO-1 ))";
+BU.ModuleInit.DisplayInitGlobalVarsInfos '__BU_HARDWARE_MODULE_LIB_FILES_PATH_ARRAY' "" 'Array' "This array (MUST BE EMPTY BY DEFAULT) stores the path of each SOURCED « Hardware » module's library files" "${BASH_SOURCE[0]}" "${FUNCNAME[0]}" "$(( LINENO - 1 ))";
 
 # -----------------------------------------------
 
@@ -156,7 +156,7 @@ BU.ModuleInit.DisplayInitGlobalVarsInfos '__BU_HARDWARE_MODULE_LIB_FILES_PATH_AR
 
 # Defining an associative array to store each sourced configuration file's path.
 __BU_HARDWARE_MODULE_CONFIG_FILES_PATH_ARRAY=();
-BU.ModuleInit.DisplayInitGlobalVarsInfos '__BU_HARDWARE_MODULE_CONFIG_FILES_PATH_ARRAY' "" 'Array' "This array (MUST BE EMPTY BY DEFAULT) stores the path of each SOURCED « main » module's configuration files" "${BASH_SOURCE[0]}" "${FUNCNAME[0]}" "$(( LINENO-1 ))";
+BU.ModuleInit.DisplayInitGlobalVarsInfos '__BU_HARDWARE_MODULE_CONFIG_FILES_PATH_ARRAY' "" 'Array' "This array (MUST BE EMPTY BY DEFAULT) stores the path of each SOURCED « main » module's configuration files" "${BASH_SOURCE[0]}" "${FUNCNAME[0]}" "$(( LINENO - 1 ))";
 
 # Storing the configuration files path variable values into an array to source, print and add easier into the "${__BU_HARDWARE_MODULE_LIST_CONFIG_FILES_PATH_ARRAY}" associative array.
 __BU_HARDWARE_MODULE_LIST_CONFIG_FILES_PATH_ARRAY=();
@@ -172,7 +172,7 @@ __BU_HARDWARE_MODULE_LIST_CONFIG_FILES_PATH_ARRAY+=("${__BU_HARDWARE_MODULE_CONF
     "${__BU_HARDWARE_MODULE_CONF_FILE_PORTS_PATH}" \
     "${__BU_HARDWARE_MODULE_CONF_FILE_TOUCHPAD_PATH}");
 
-BU.ModuleInit.DisplayInitGlobalVarsInfos '__BU_HARDWARE_MODULE_LIST_CONFIG_FILES_PATH_ARRAY' "" 'Array' "This array stores the path of each « main » module's configuration files TO SOURCE (NOT SOURCED YET)" "${BASH_SOURCE[0]}" "${FUNCNAME[0]}" "$(( LINENO-4 ))" "${__BU_HARDWARE_MODULE_LIST_CONFIG_FILES_PATH_ARRAY[@]}";
+BU.ModuleInit.DisplayInitGlobalVarsInfos '__BU_HARDWARE_MODULE_LIST_CONFIG_FILES_PATH_ARRAY' "" 'Array' "This array stores the path of each « main » module's configuration files TO SOURCE (NOT SOURCED YET)" "${BASH_SOURCE[0]}" "${FUNCNAME[0]}" "$(( LINENO - 4 ))" "${__BU_HARDWARE_MODULE_LIST_CONFIG_FILES_PATH_ARRAY[@]}";
 
 # -----------------------------------------------
 
