--- a/install/.Bash-utils/config/modules/main/ColorsBG.conf
+++ b/install/.Bash-utils/config/modules/main/ColorsBG.conf
@@ -641,7 +641,7 @@ __BU_MAIN_COLOR_BG_WHITE="$(BU.Main.TextFormat.SetBGColor "${__BU_MAIN_COLOR_COD
 
     BU.ModuleInit.DisplayInitGlobalVarsInfos '__BU_MAIN_COLOR_BG_WHITE' "${__BU_MAIN_COLOR_BG_WHITE}" 'CMD' \
         "$(BU.Main.ModConfig.Colors.BG.PrintColorVarNameCmdSub          "${__BU_MODULE_INIT_MSG__BU_MAIN_MODCONFIG__COLORS__COL_WHITE}" 'C')" \
-        "${__BU_MODULE_INIT_MSG__DISP_INIT_GLOB_VARS_INFO__IS_VAR_DEF_IN_INITIALIZER__MAIN_MODULE_CONF}" "${BASH_SOURCE[0]}"
+        "${__BU_MODULE_INIT_MSG__DISP_INIT_GLOB_VARS_INFO__IS_VAR_DEF_IN_INITIALIZER__MAIN_MODULE_CONF}" "${BASH_SOURCE[0]}" \
         "${FUNCNAME[0]}" "${____BU_MAIN_MOD_BG_COLOR_DEF_LINENO}";
 };
 
@@ -667,7 +667,7 @@ __BU_MAIN_COLOR_BG_YELLOW="$(BU.Main.TextFormat.SetBGColor "${__BU_MAIN_COLOR_CO
     printf "%s" "${__BU_MAIN_COLOR_BG_YELLOW}";
 
     BU.ModuleInit.DisplayInitGlobalVarsInfos '__BU_MAIN_COLOR_BG_YELLOW'    "${__BU_MAIN_COLOR_BG_YELLOW}" 'CMD' \
-        "$(BU.Main.ModConfig.Colors.BG.PrintColorVarNameCmdSub              "${__BU_MODULE_INIT_MSG__BU_MAIN_MODCONFIG__COLORS__COL_YELLOW}" 'C')"
+        "$(BU.Main.ModConfig.Colors.BG.PrintColorVarNameCmdSub              "${__BU_MODULE_INIT_MSG__BU_MAIN_MODCONFIG__COLORS__COL_YELLOW}" 'C')" \
         "${__BU_MODULE_INIT_MSG__DISP_INIT_GLOB_VARS_INFO__IS_VAR_DEF_IN_INITIALIZER__MAIN_MODULE_CONF}" "${BASH_SOURCE[0]}" \
         "${FUNCNAME[0]}" "${____BU_MAIN_MOD_BG_COLOR_DEF_LINENO}";
 };
@@ -932,7 +932,7 @@ __BU_MAIN_COLOR_BG_WARNING="$(BU.Main.TextFormat.SetBGColor "${__BU_MAIN_COLOR_C
     printf "%s" "${__BU_MAIN_COLOR_BG_WARNING}";
 
     BU.ModuleInit.DisplayInitGlobalVarsInfos '__BU_MAIN_COLOR_BG_WARNING' "${__BU_MAIN_COLOR_BG_WARNING}" 'CMD' \
-        "$(BU.Main.ModConfig.Colors.BG.PrintColorVarNameCmdSub "${__BU_MODULE_INIT_MSG__BU_MAIN_MODCONFIG__COLORS__ACT_WARNING}" 'A')"
+        "$(BU.Main.ModConfig.Colors.BG.PrintColorVarNameCmdSub "${__BU_MODULE_INIT_MSG__BU_MAIN_MODCONFIG__COLORS__ACT_WARNING}" 'A')" \
         "${__BU_MODULE_INIT_MSG__DISP_INIT_GLOB_VARS_INFO__IS_VAR_DEF_IN_INITIALIZER__MAIN_MODULE_CONF}" \
         "${BASH_SOURCE[0]}" "${FUNCNAME[0]}" "${____BU_MAIN_MOD_BG_COLOR_DEF_LINENO}";
 }
