--- a/install/.Bash-utils/config/modules/main/ColorsText.conf
+++ b/install/.Bash-utils/config/modules/main/ColorsText.conf
@@ -896,7 +896,7 @@ __BU_MAIN_COLOR_TXT_VAR="$(BU.Main.TextFormat.SetTextColor "${__BU_MAIN_COLOR_CO
 
     BU.ModuleInit.DisplayInitGlobalVarsInfos '__BU_MAIN_COLOR_TXT_VAR' "${__BU_MAIN_COLOR_TXT_VAR}" 'CMD' \
         "$(BU.Main.ModConfig.Colors.Text.PrintColorVarNameCmdSub "${__BU_MODULE_INIT_MSG__BU_MAIN_MODCONFIG__COLORS__ACT_VAR}" 'A')" \
-        "${__BU_MODULE_INIT_MSG__DISP_INIT_GLOB_VARS_INFO__IS_VAR_DEF_IN_INITIALIZER__MAIN_MODULE_CONF}"
+        "${__BU_MODULE_INIT_MSG__DISP_INIT_GLOB_VARS_INFO__IS_VAR_DEF_IN_INITIALIZER__MAIN_MODULE_CONF}" \
         "${BASH_SOURCE[0]}" "${FUNCNAME[0]}" "${____BU_MAIN_MOD_TEXT_COLOR_DEF_LINENO}";
 }
 
