--- a/install/.Bash-utils/config/modules/main/module.conf
+++ b/install/.Bash-utils/config/modules/main/module.conf
@@ -166,7 +166,7 @@ function BU.Main.ModConfig.Module.BUDevToolsPaths()
         BU.ModuleInit.PrintLogError "${BASH_SOURCE[0]}" "${v_lineno}" 'ERR_BU_MAIN_MOD_CONF__INIT_VARPATH_FAILED';
 
         printf "${__BU_MODULE_INIT_MSG__PRINT_MISSING_PATH_FOR_DEFINED_GLOBAL_VARIABLE__NO_FNCT}" \
-            "${__BU_MODULE_INIT_MSG__DISP_INIT_GLOB_VARS_INFO__IS_VAR_DEF_IN_INITIALIZER__MAIN_MODULE_CONF}"
+            "${__BU_MODULE_INIT_MSG__DISP_INIT_GLOB_VARS_INFO__IS_VAR_DEF_IN_INITIALIZER__MAIN_MODULE_CONF}" \
             "${BASH_SOURCE[0]}" "${v_lineno}" '$__BU_MAIN_MODULE_DEVTOOLS_ROOT_DIR_PATH';
 
         BU.ModuleInit.MsgAbort;
@@ -820,7 +820,7 @@ else
     # Checking if the current user cannot read the "Bash-utils-root-val.path" (file created and owned by the "root" user).
     elif [ -f "${__BU_MAIN_ROOT_DIR_PATH_STORAGE_FILE_PATH}" ] && [ ! -r "${__BU_MAIN_ROOT_DIR_PATH_STORAGE_FILE_PATH}" ]; then declare -i ____bu_main_modconfig_lineno="${LINENO}"; # VAR TYPE : Int   - DESC : Line number of the error occurence.
 
-        BU.ModuleInit.PrintLogError "${BASH_SOURCE[0]}" "${____bu_main_modconfig_lineno}" "ERR_BU_MAIN_MOD_CONF__UNALLOWED_TO_READ_ROOT_DIR_STORAGE_FILE_PATH"
+        BU.ModuleInit.PrintLogError "${BASH_SOURCE[0]}" "${____bu_main_modconfig_lineno}" "ERR_BU_MAIN_MOD_CONF__UNALLOWED_TO_READ_ROOT_DIR_STORAGE_FILE_PATH";
 
         ____v_bu_module_init__bu_main_root_dir_path__chk_err="$(BU.ModuleInit.CheckPath "${__BU_MAIN_ROOT_DIR_PATH}")"; echo >&2;
 
@@ -846,7 +846,7 @@ else
     # Handling the absence of the "Bash-utils-root-val.path" file.
     elif [ ! -f "${__BU_MAIN_ROOT_DIR_PATH_STORAGE_FILE_PATH}" ]; then declare -i ____bu_main_modconfig_lineno="${LINENO}"; # VAR TYPE : Int   - DESC : Line number of the error occurence.
 
-        BU.ModuleInit.PrintLogError "${BASH_SOURCE[0]}" "${____bu_main_modconfig_lineno}" "ERR_BU_MAIN_MOD_CONF__ABSENT_ROOT_DIR_STORAGE_FILE_PATH"
+        BU.ModuleInit.PrintLogError "${BASH_SOURCE[0]}" "${____bu_main_modconfig_lineno}" "ERR_BU_MAIN_MOD_CONF__ABSENT_ROOT_DIR_STORAGE_FILE_PATH";
 
         ____v_bu_module_init__bu_main_root_dir_path__chk_err="$(BU.ModuleInit.CheckPath "${__BU_MAIN_ROOT_DIR_PATH}")"; echo >&2;
 
