--- a/install/.Bash-utils/config/modules/main/text.conf
+++ b/install/.Bash-utils/config/modules/main/text.conf
@@ -75,14 +75,14 @@ function BU.Main.ModConfig.Text.PrintVariableNameFailedToInitialize() {
 ## COLUMNS AND LINES
 
 # Getting the columns number on the current text mode according to its window's length.
-__BU_MAIN_TXT_COLS="$(tput cols || stty size | cut -d " " -f2)"
+__BU_MAIN_TXT_COLS="$(tput cols || stty size | cut -d " " -f2)";
 
-BU.ModuleInit.DisplayInitGlobalVarsInfos '__BU_MAIN_TXT_COLS' "${__BU_MAIN_TXT_COLS}" 'CMD' "$(BU.Main.ModConfig.Text.PrintTextModeCmdSubs 'cols')" "${__BU_MODULE_INIT_MSG__DISP_INIT_GLOB_VARS_INFO__IS_VAR_DEF_IN_INITIALIZER__MAIN_MODULE_CONF}" "${BASH_SOURCE[0]}" "${FUNCNAME[0]}" "$(( LINENO-2 ))";
+BU.ModuleInit.DisplayInitGlobalVarsInfos '__BU_MAIN_TXT_COLS' "${__BU_MAIN_TXT_COLS}" 'CMD' "$(BU.Main.ModConfig.Text.PrintTextModeCmdSubs 'cols')" "${__BU_MODULE_INIT_MSG__DISP_INIT_GLOB_VARS_INFO__IS_VAR_DEF_IN_INITIALIZER__MAIN_MODULE_CONF}" "${BASH_SOURCE[0]}" "${FUNCNAME[0]}" "$(( LINENO - 2 ))";
 
 # Getting the lines number on the current text mode according to its window's height.
-__BU_MAIN_TXT_LINES="$(tput lines || stty size | cut -d " " -f1)"
+__BU_MAIN_TXT_LINES="$(tput lines || stty size | cut -d " " -f1)";
 
-BU.ModuleInit.DisplayInitGlobalVarsInfos '__BU_MAIN_TXT_LINES' "${__BU_MAIN_TXT_LINES}" 'CMD' "$(BU.Main.ModConfig.Text.PrintTextModeCmdSubs 'lines')" "${__BU_MODULE_INIT_MSG__DISP_INIT_GLOB_VARS_INFO__IS_VAR_DEF_IN_INITIALIZER__MAIN_MODULE_CONF}" "${BASH_SOURCE[0]}" "${FUNCNAME[0]}" "$(( LINENO-2 ))";
+BU.ModuleInit.DisplayInitGlobalVarsInfos '__BU_MAIN_TXT_LINES' "${__BU_MAIN_TXT_LINES}" 'CMD' "$(BU.Main.ModConfig.Text.PrintTextModeCmdSubs 'lines')" "${__BU_MODULE_INIT_MSG__DISP_INIT_GLOB_VARS_INFO__IS_VAR_DEF_IN_INITIALIZER__MAIN_MODULE_CONF}" "${BASH_SOURCE[0]}" "${FUNCNAME[0]}" "$(( LINENO - 2 ))";
 
 exit 0;
 # -----------------------------------------------
@@ -96,27 +96,27 @@ __BU_MAIN_TXT_CHAR_HEADER_LINE="-"		# Caractère à afficher en boucle pour cré
 # Since the color global variables are defined in the "Colors.conf" file, AND since this file is already sourced before this file, it's safe to call these global variables.
 
 # shellcheck disable=SC2059
-BU.ModuleInit.DisplayInitGlobalVarsInfos '__BU_MAIN_TXT_CHAR_HEADER_LINE' "${__BU_MAIN_TXT_CHAR_HEADER_LINE}" 'Char' "$(printf "${__BU_MODULE_INIT_MSG__BU_MAIN_MODCONFIG__TEXT__BU_MAIN_TXT_CHAR_HEADER_LINE__VAR}" "${__BU_MAIN_COLOR_TXT_FUNCTION}BU.Main.Headers.DrawLine${__BU_MAIN_COLOR_TXT_RESET}")" "${__BU_MODULE_INIT_MSG__DISP_INIT_GLOB_VARS_INFO__IS_VAR_DEF_IN_INITIALIZER__MAIN_MODULE_CONF}" "${BASH_SOURCE[0]}" "${FUNCNAME[0]}" "$(( LINENO-5 ))";
+BU.ModuleInit.DisplayInitGlobalVarsInfos '__BU_MAIN_TXT_CHAR_HEADER_LINE' "${__BU_MAIN_TXT_CHAR_HEADER_LINE}" 'Char' "$(printf "${__BU_MODULE_INIT_MSG__BU_MAIN_MODCONFIG__TEXT__BU_MAIN_TXT_CHAR_HEADER_LINE__VAR}" "${__BU_MAIN_COLOR_TXT_FUNCTION}BU.Main.Headers.DrawLine${__BU_MAIN_COLOR_TXT_RESET}")" "${__BU_MODULE_INIT_MSG__DISP_INIT_GLOB_VARS_INFO__IS_VAR_DEF_IN_INITIALIZER__MAIN_MODULE_CONF}" "${BASH_SOURCE[0]}" "${FUNCNAME[0]}" "$(( LINENO - 5 ))";
 
 # Affichage de chevrons avant une chaîne de caractères (par exemple).
-__BU_MAIN_TXT_PRINT_TAB=">>>>"
+__BU_MAIN_TXT_PRINT_TAB=">>>>";
 
-BU.ModuleInit.DisplayInitGlobalVarsInfos '__BU_MAIN_TXT_PRINT_TAB' "${__BU_MAIN_TXT_PRINT_TAB}" 'String' "${__BU_MODULE_INIT_MSG__BU_MAIN_MODCONFIG__TEXT__BU_MAIN_TXT_PRINT_TAB__VAR}" "${__BU_MODULE_INIT_MSG__DISP_INIT_GLOB_VARS_INFO__IS_VAR_DEF_IN_INITIALIZER__MAIN_MODULE_CONF}" "${BASH_SOURCE[0]}" "${FUNCNAME[0]}" "$(( LINENO-2 ))";
+BU.ModuleInit.DisplayInitGlobalVarsInfos '__BU_MAIN_TXT_PRINT_TAB' "${__BU_MAIN_TXT_PRINT_TAB}" 'String' "${__BU_MODULE_INIT_MSG__BU_MAIN_MODCONFIG__TEXT__BU_MAIN_TXT_PRINT_TAB__VAR}" "${__BU_MODULE_INIT_MSG__DISP_INIT_GLOB_VARS_INFO__IS_VAR_DEF_IN_INITIALIZER__MAIN_MODULE_CONF}" "${BASH_SOURCE[0]}" "${FUNCNAME[0]}" "$(( LINENO - 2 ))";
 
 # -----------------------------------------------
 
 ## STORING TEXT
 
 # Storing a string got from a specific line (with a function like "BU.Main.Files.GetLineFromTextFile()", from "main/Files.lib" source file).
-__BU_MAIN_TXT_STORE_LINE=""
+__BU_MAIN_TXT_STORE_LINE="";
 
-BU.ModuleInit.DisplayInitGlobalVarsInfos '__BU_MAIN_TXT_STORE_LINE' "${__BU_MAIN_TXT_STORE_LINE}" 'String' "${__BU_MODULE_INIT_MSG__BU_MAIN_MODCONFIG__TEXT__BU_MAIN_TXT_STORE_LINE__VAR}" "${__BU_MODULE_INIT_MSG__DISP_INIT_GLOB_VARS_INFO__IS_VAR_DEF_IN_INITIALIZER__MAIN_MODULE_CONF}" "${BASH_SOURCE[0]}" "${FUNCNAME[0]}" "$(( LINENO-2 ))";
+BU.ModuleInit.DisplayInitGlobalVarsInfos '__BU_MAIN_TXT_STORE_LINE' "${__BU_MAIN_TXT_STORE_LINE}" 'String' "${__BU_MODULE_INIT_MSG__BU_MAIN_MODCONFIG__TEXT__BU_MAIN_TXT_STORE_LINE__VAR}" "${__BU_MODULE_INIT_MSG__DISP_INIT_GLOB_VARS_INFO__IS_VAR_DEF_IN_INITIALIZER__MAIN_MODULE_CONF}" "${BASH_SOURCE[0]}" "${FUNCNAME[0]}" "$(( LINENO - 2 ))";
 
 # Getting the messages printed with the "${__BU_MAIN_STAT_ECHO}='true'" status ?
 __BU_MAIN_TXT_STORE_ECHO_TRUE_MESSAGES_ARRAY=();    # Note : since this variable is an array, please leave empty the second argument of the "BU.ModuleInit.DisplayInitGlobalVarsInfos()" function.
 
 # shellcheck disable=SC2059
-BU.ModuleInit.DisplayInitGlobalVarsInfos '__BU_MAIN_TXT_STORE_ECHO_TRUE_MESSAGES_ARRAY' "" 'Array' "$(printf "${__BU_MODULE_INIT_MSG__BU_MAIN_MODCONFIG__TEXT__BU_MAIN_TXT_STORE_ECHO_TRUE_MESSAGES_ARRAY__ARRAY}" "${__BU_MAIN_COLOR_TXT_VAR}\${__BU_MAIN_STAT_ECHO}${__BU_MAIN_COLOR_TXT_RESET}" "${__BU_MAIN_COLOR_TXT_VAR}true${__BU_MAIN_COLOR_TXT_RESET}")" "${__BU_MODULE_INIT_MSG__DISP_INIT_GLOB_VARS_INFO__IS_VAR_DEF_IN_INITIALIZER__MAIN_MODULE_CONF}" "${BASH_SOURCE[0]}" "${FUNCNAME[0]}" "$(( LINENO-3 ))";
+BU.ModuleInit.DisplayInitGlobalVarsInfos '__BU_MAIN_TXT_STORE_ECHO_TRUE_MESSAGES_ARRAY' "" 'Array' "$(printf "${__BU_MODULE_INIT_MSG__BU_MAIN_MODCONFIG__TEXT__BU_MAIN_TXT_STORE_ECHO_TRUE_MESSAGES_ARRAY__ARRAY}" "${__BU_MAIN_COLOR_TXT_VAR}\${__BU_MAIN_STAT_ECHO}${__BU_MAIN_COLOR_TXT_RESET}" "${__BU_MAIN_COLOR_TXT_VAR}true${__BU_MAIN_COLOR_TXT_RESET}")" "${__BU_MODULE_INIT_MSG__DISP_INIT_GLOB_VARS_INFO__IS_VAR_DEF_IN_INITIALIZER__MAIN_MODULE_CONF}" "${BASH_SOURCE[0]}" "${FUNCNAME[0]}" "$(( LINENO - 3 ))";
 
 # -----------------------------------------------
 
@@ -125,7 +125,7 @@ BU.ModuleInit.DisplayInitGlobalVarsInfos '__BU_MAIN_TXT_STORE_ECHO_TRUE_MESSAGES
 # Splitting a string into substrings.
 __BU_MAIN_TXT_ERR_SUBSTR_DELIM=' [/|\] ';
 
-BU.ModuleInit.DisplayInitGlobalVarsInfos '__BU_MAIN_TXT_ERR_SUBSTR_DELIM' "${__BU_MAIN_TXT_ERR_SUBSTR_DELIM}" "String" "${__BU_MODULE_INIT_MSG__BU_MAIN_MODCONFIG__TEXT__BU_MAIN_TXT_ERR_SUBSTR_DELIM__VAR}" "${__BU_MODULE_INIT_MSG__DISP_INIT_GLOB_VARS_INFO__IS_VAR_DEF_IN_INITIALIZER__MAIN_MODULE_CONF}" "${BASH_SOURCE[0]}" "${FUNCNAME[0]}" "$(( LINENO-2 ))";
+BU.ModuleInit.DisplayInitGlobalVarsInfos '__BU_MAIN_TXT_ERR_SUBSTR_DELIM' "${__BU_MAIN_TXT_ERR_SUBSTR_DELIM}" "String" "${__BU_MODULE_INIT_MSG__BU_MAIN_MODCONFIG__TEXT__BU_MAIN_TXT_ERR_SUBSTR_DELIM__VAR}" "${__BU_MODULE_INIT_MSG__DISP_INIT_GLOB_VARS_INFO__IS_VAR_DEF_IN_INITIALIZER__MAIN_MODULE_CONF}" "${BASH_SOURCE[0]}" "${FUNCNAME[0]}" "$(( LINENO - 2 ))";
 
 # -----------------------------------------------
 
@@ -286,7 +286,7 @@ function BU.Main.ModConfig.Text.WrapTextFormattingSubSection()
     # Dim reset
     # ----------------------------------------------------------------------------------------------------------------------
 
-    __bu_main_txt_fmt_dim_reset_lineno="$(( LINENO + 2 ))"
+    __bu_main_txt_fmt_dim_reset_lineno="$(( LINENO + 2 ))";
 
     __BU_MAIN_TXT_FMT_DIM_RESET="$(BU.Main.TextFormat.SetTextFormat '' '22' '--no-function')" || {
         printf "\n";
@@ -310,7 +310,7 @@ function BU.Main.ModConfig.Text.WrapTextFormattingSubSection()
     # Hidden (useful for password typing).
     # ----------------------------------------------------------------------------------------------------------------------
 
-    __bu_main_txt_fmt_hidden_lineno="$(( LINENO + 2 ))"
+    __bu_main_txt_fmt_hidden_lineno="$(( LINENO + 2 ))";
 
     __BU_MAIN_TXT_FMT_HIDDEN="$(BU.Main.TextFormat.SetTextFormat '' '8' '--no-function')" || {
         printf "\e[8m"; printf "\n";
