Changed the name of the "${__BU_MODULE_INIT__TMP_DIR}" variable to "${__BU_MODULE_INIT__TMP_DIR_PATH}"

--- a/install/.Bash-utils/config/modules/main/Project.conf
+++ b/install/.Bash-utils/config/modules/main/Project.conf
@@ -196,12 +196,12 @@ BU.ModuleInit.DisplayInitGlobalVarsInfos '__BU_MAIN_PROJECT_COLOR_TEXT_RAW_CODE_
 # -------
 
 # Defining the project's "BU.Echo<...>()" functions debug output (to have a better view during a "bash - x" debug).
-# __BU_MAIN_PROJECT_ECHO_OUTPUT_FILE_PARENT --> Default value : "${__BU_MAIN_PROJECT_LOG_DIR_PATH}"
-# __BU_MAIN_PROJECT_ECHO_OUTPUT_FILE_NAME   --> Default value : "echo_output.log"
+# __BU_MAIN_PROJECT_ECHO_OUTPUT_FILE_PARENT --> Default value : "${__BU_MAIN_PROJECT_LOG_DIR_PATH}",    or "${__BU_MODULE_INIT__TMP_DIR_PATH}" if the project's temporary directory was not found.
+# __BU_MAIN_PROJECT_ECHO_OUTPUT_FILE_NAME   --> Default value : "echo_output.log",                      or "echo_output_${__BU_MAIN_PROJECT_NAME}.log", according to the last variable's path value.
 # __BU_MAIN_PROJECT_ECHO_OUTPUT_FILE_PATH   --> Default value : "${__BU_MAIN_PROJECT_ECHO_OUTPUT_FILE_PARENT}/${__BU_MAIN_PROJECT_ECHO_OUTPUT_FILE_NAME}"
 
-__BU_MAIN_PROJECT_ECHO_OUTPUT_FILE_PARENT="${__BU_MAIN_PROJECT_LOG_DIR_PATH}";
-__BU_MAIN_PROJECT_ECHO_OUTPUT_FILE_NAME="echo_output.log";
+if [ -d "${__BU_MAIN_PROJECT_LOG_DIR_PATH}" ]; then __BU_MAIN_PROJECT_ECHO_OUTPUT_FILE_PARENT="${__BU_MAIN_PROJECT_LOG_DIR_PATH}";  else __BU_MAIN_PROJECT_ECHO_OUTPUT_FILE_PARENT="${__BU_MODULE_INIT__TMP_DIR_PATH}"; fi
+if [ -d "${__BU_MAIN_PROJECT_LOG_DIR_PATH}" ]; then __BU_MAIN_PROJECT_ECHO_OUTPUT_FILE_NAME="echo_output.log";                      else __BU_MAIN_PROJECT_ECHO_OUTPUT_FILE_NAME="echo_output_${__BU_MAIN_PROJECT_NAME}.log"; fi
 __BU_MAIN_PROJECT_ECHO_OUTPUT_FILE_PATH="${__BU_MAIN_PROJECT_ECHO_OUTPUT_FILE_PARENT}/${__BU_MAIN_PROJECT_ECHO_OUTPUT_FILE_NAME}";
 
 BU.ModuleInit.DisplayInitGlobalVarsInfos '__BU_MAIN_PROJECT_ECHO_OUTPUT_FILE_PARENT'    "${__BU_MAIN_PROJECT_ECHO_OUTPUT_FILE_PARENT}"  'Dirpath'	"${__BU_MODULE_INIT_MSG__BU_MAIN_MODCONFIG__PROJECT__BU_MAIN_PROJECT_ECHO_OUTPUT_FILE_PARENT}"  "${__BU_MODULE_INIT_MSG__DISP_INIT_GLOB_VARS_INFO__IS_VAR_DEF_IN_INITIALIZER__MAIN_MODULE_CONF}" "${BASH_SOURCE[0]}" "${FUNCNAME[0]}" "$(( LINENO - 4 ))";
