--- a/install/.Bash-utils/config/modules/main/ColorsBG.conf
+++ b/install/.Bash-utils/config/modules/main/ColorsBG.conf
@@ -112,7 +112,7 @@ __BU_MAIN_COLOR_BG_BLUE="$(BU.Main.TextFormat.SetBGColor "${__BU_MAIN_COLOR_CODE
 
     if BU.ModuleInit.IsInScript; then BU.ModuleInit.Exit 1; else return 1; fi
 }; [ "${__BU_MODULE_INIT_MSG_ARRAY_MODE}" == '--mode-log-full' ] && {
-    printf "%s" "$[__BU_MAIN_COLOR_BG_BLUE]";
+    printf "%s" "${__BU_MAIN_COLOR_BG_BLUE}";
 
     BU.ModuleInit.DisplayInitGlobalVarsInfos '__BU_MAIN_COLOR_BG_BLUE'  "${__BU_MAIN_COLOR_BG_BLUE}" 'CMD' \
         "$(BU.Main.ModConfig.Colors.BG.PrintColorVarNameCmdSub          "${__BU_MODULE_INIT_MSG__BU_MAIN_MODCONFIG__COLORS__COL_BLUE}" 'C')" \
