Added aliases for some functions from the "Args.Lib" file

--- a/install/.Bash-utils/config/modules/main/Aliases.conf
+++ b/install/.Bash-utils/config/modules/main/Aliases.conf
@@ -25,11 +25,29 @@
 
 ##################################### DEFINING ALIASES - ARGS #####################################
 
-#### CATEGORY : ""
+#### CATEGORY : "ARGUMENT VALUES CHECKING : UTILITES FUNCTIONS"
 
-## SUB-CATEGORY : ""
+## SUB-CATEGORY : "PATH CHECKING FUNCTIONS"
 
+# -----------------------------------------------
 
+## SUB-CATEGORY : "QUICK MESSAGE PRINTING"
+
+alias BU.PrintBadOption='BU.Main.Args.PrintBadOption';
+
+# -----------------------------------------------
+
+## SUB-CATEGORY : "ARGUMENT PRESENCE CHECKING"
+
+alias BU.GetFuncArgsArrayValues='BU.Main.Args.GetFuncArgsArrayValues';
+alias BU.GetFileName='BU.Main.Args.GetFileName';
+alias BU.GetFunctionName='BU.Main.Args.GetFunctionName';
+alias BU.GetLineNumber='BU.Main.Args.GetLineNumber';
+alias BU.GetFFL='BU.Main.Args.GetFFL';
+alias BU.PrintFFL='BU.Main.Args.PrintFFL';
+alias BU.PrintFFLErrorOccured='BU.Main.Args.PrintFFLErrorOccured';
+alias BU.Argc='BU.Main.Args.Argc';
+alias BU.GetArgc-FFL='BU.Main.Args.GetArgc-FFL';
 
 # -----------------------------------------------
 
