--- a/install/.Bash-utils/config/modules/main/Aliases.conf
+++ b/install/.Bash-utils/config/modules/main/Aliases.conf
@@ -256,7 +256,7 @@ alias BU.CheckTextFormat='BU.Main.TextFormat.SetTextFormat';
 ## SUB-CATEGORY : "WRITING DIFFERENTLY COLORED/FORMATTED TEXT BETWEEN TEXT - BASIS"
 
 #
-alias BU.Main.Decho.Decho='BU.Main.Decho.Decho'
+alias BU.Main.Decho.Decho='BU.Main.Decho.Decho';
 
 # -----------------------------------------------
 
@@ -2313,7 +2313,7 @@ alias BU.GetAndroidVersion='BU.Main.OS.GetAndroidVersion';
 
 ## SUB-CATEGORY : "CHECKING INFORMATIONS"
 
-alias BU.IsOSBSD='BU.Main.OS.IsBSD'
+alias BU.IsOSBSD='BU.Main.OS.IsBSD';
 
 # -----------------------------------------------
 
