Adding support for the installation of Steam games through the SteamCMD program

--- a/install/.Bash-utils/config/modules/Software/OSMgr.conf
+++ b/install/.Bash-utils/config/modules/Software/OSMgr.conf
@@ -16,14 +16,24 @@
 # Getting the user's current operating system, and storing the information in the "${__BU_SOFTWARE_CURRENT_OS}" global variable.
 function BU.Software.ModConfig.OSMgr.GetCurrentOS()
 {
+    #**** Parameters ****
+    local p_useLinuxFunctions=${1:-$'\0'};  # ARG TYPE : String     - OPTIONAL | DEFAULT VAL : NULL     - DESC : Determines if the user wants to use Linux functions for Android or Chrome OS.
+
+    #**** Code ****
+    # TODO : Checking if the user wants to use Linux functions for Android or Chrome OS, since both operating systems are based on Linux.
+
+    # ----------------------------------------------------------------------------------------------------------------------------------------------------
     # CASE MATTERS, DO NOT MODIFY ANY VALUES, AS THE THE FUNCTIONS NAMES ARE CASE SENSITIVE (OPERATING SYSTEMS NAMES WRITTEN IN THE FUNCTIONS NAMES) !!!!!
 
     # The "${__BU_SOFTWARE_CURRENT_OS}" variable is declared as constants, as its value must not be changed during the script's execution.
-    BU.Main.OS.IsBSD        && declare -r __BU_SOFTWARE_CURRENT_OS="BSD";
-    BU.Main.OS.IsHaiku      && declare -r __BU_SOFTWARE_CURRENT_OS="Haiku";
-    BU.Main.OS.
-    BU.Main.OS.
-    BU.Main.OS.
+    BU.Main.OS.IsBSD        && { declare -r __BU_SOFTWARE_CURRENT_OS='BSD';     };
+    BU.Main.OS.IsHaiku      && { declare -r __BU_SOFTWARE_CURRENT_OS='Haiku';   };
+    BU.Main.OS.IsOSX        && { declare -r __BU_SOFTWARE_CURRENT_OS='OSX';     };
+    BU.Main.OS.IsWindows    && { declare -r __BU_SOFTWARE_CURRENT_OS='Windows'; };
+
+    BU.Main.OS.IsAndroid    && { if [ -z "${p_useLinuxFunctions}" ]; then   declare -r __BU_SOFTWARE_CURRENT_OS='Android';  else declare -r __BU_SOFTWARE_CURRENT_OS='Linux'; fi };
+    BU.Main.OS.IsChrome     && { if [ -z "${p_useLinuxFunctions}" ]; then   declare -r __BU_SOFTWARE_CURRENT_OS='Chrome';   else declare -r __BU_SOFTWARE_CURRENT_OS='Linux'; fi };
+    BU.Main.OS.IsLinux      && { [ -z "${__BU_SOFTWARE_CURRENT_OS}" ]  &&   declare -r __BU_SOFTWARE_CURRENT_OS='Linux';    };
 }
 
 # -----------------------------------------------
@@ -40,4 +50,4 @@ function BU.Software.ModConfig.OSMgr.GetCurrentOS()
 
 ##
 
-BU.Software.ModConfig.OSMgr.GetCurrentOS;
+BU.Software.ModConfig.OSMgr.GetCurrentOS "";
