Changed the path to the temporary directory of any Bash Utils project

--- a/install/.Bash-utils/config/modules/main/Project.conf
+++ b/install/.Bash-utils/config/modules/main/Project.conf
@@ -67,10 +67,9 @@ __BU_MAIN_PROJECT_NAME=$(basename "${0}" | cut -f 1 -d '.');    # Name of the pr
 BU.ModuleInit.DisplayInitGlobalVarsInfos '__BU_MAIN_PROJECT_FILE_NAME' "${__BU_MAIN_PROJECT_FILE_NAME}"   'String' "${__BU_MODULE_INIT_MSG__BU_MAIN_MODCONFIG__PROJECT__BU_MAIN_PROJECT_FILE_NAME__VAR}"    "${__BU_MODULE_INIT_MSG__DISP_INIT_GLOB_VARS_INFO__IS_VAR_DEF_IN_INITIALIZER__MAIN_MODULE_CONF}" "${BASH_SOURCE[0]}" "${FUNCNAME[0]}" "$(( LINENO - 3 ))";
 BU.ModuleInit.DisplayInitGlobalVarsInfos '__BU_MAIN_PROJECT_NAME' "${__BU_MAIN_PROJECT_NAME}"             'String' "${__BU_MODULE_INIT_MSG__BU_MAIN_MODCONFIG__PROJECT__BU_MAIN_PROJECT_NAME__VAR}"         "${__BU_MODULE_INIT_MSG__DISP_INIT_GLOB_VARS_INFO__IS_VAR_DEF_IN_INITIALIZER__MAIN_MODULE_CONF}" "${BASH_SOURCE[0]}" "${FUNCNAME[0]}" "$(( LINENO - 3 ))";
 
-
-
-__BU_MAIN_PROJECT_TMP_DIR_PARENT_NAME="tmp";
-__BU_MAIN_PROJECT_TMP_DIR_PARENT_PATH="${__BU_MAIN_ROOT_DIR_PATH}/${__BU_MAIN_PROJECT_TMP_DIR_PARENT_NAME}";
+# Project's temporary directory.
+__BU_MAIN_PROJECT_TMP_DIR_PARENT_NAME="BASH UTILS PROJECTS";
+__BU_MAIN_PROJECT_TMP_DIR_PARENT_PATH="${__BU_MODULE_INIT__TMP_DIR_PATH}/${__BU_MAIN_PROJECT_TMP_DIR_PARENT_NAME}";
 
 BU.ModuleInit.DisplayInitGlobalVarsInfos '__BU_MAIN_PROJECT_TMP_DIR_PARENT_NAME' "${__BU_MAIN_PROJECT_TMP_DIR_PARENT_NAME}" 'Dir'	    "${__BU_MODULE_INIT_MSG__BU_MAIN_MODCONFIG__PROJECT__BU_MAIN_PROJECT_TMP_DIR_PARENT_NAME}"  "${__BU_MODULE_INIT_MSG__DISP_INIT_GLOB_VARS_INFO__IS_VAR_DEF_IN_INITIALIZER__MAIN_MODULE_CONF}" "${BASH_SOURCE[0]}" "${FUNCNAME[0]}" "$(( LINENO - 3 ))";
 BU.ModuleInit.DisplayInitGlobalVarsInfos '__BU_MAIN_PROJECT_TMP_DIR_PARENT_PATH' "${__BU_MAIN_PROJECT_TMP_DIR_PARENT_PATH}" 'Dirpath'   "${__BU_MODULE_INIT_MSG__BU_MAIN_MODCONFIG__PROJECT__BU_MAIN_PROJECT_TMP_DIR_PARENT_PATH}"  "${__BU_MODULE_INIT_MSG__DISP_INIT_GLOB_VARS_INFO__IS_VAR_DEF_IN_INITIALIZER__MAIN_MODULE_CONF}" "${BASH_SOURCE[0]}" "${FUNCNAME[0]}" "$(( LINENO - 3 ))";
