Added new functions in the "Text.lib" file

--- a/install/.Bash-utils/config/modules/main/Aliases.conf
+++ b/install/.Bash-utils/config/modules/main/Aliases.conf
@@ -2746,6 +2746,13 @@ alias BU.GetStringWordsNumber='BU.Main.Text.GetStringWordsNumber';
 
 # -----------------------------------------------
 
+## SUB-CATEGORY : "LISTING TEXT"
+
+alias BU.ListCharactersFromFile='BU.Main.Text.ListCharactersFromFile';
+alias BU.ListWordsFromFile='BU.Main.Text.ListWordsFromFile';
+
+# -----------------------------------------------
+
 ## SUB-CATEGORY : "PRINTING TEXT"
 
 alias BU.PrintCharXTimes='BU.Main.Text.PrintCharXTimes';
