Added the WSL's DRVFS file system to the list of supported file systems

--- a/install/.Bash-utils/config/modules/main/Filesystem.conf
+++ b/install/.Bash-utils/config/modules/main/Filesystem.conf
@@ -59,6 +59,19 @@ elif [ "${__BU_MAIN_FS_NAME,,}" == 'btrfs' ]; then
 
 # -----------------------------------------------
 
+## DRVFS FILE SYSTEM'S INFORMATIONS (WSL FILE SYSTEM)
+
+elif [ "${__BU_MAIN_FS_NAME,,}" == 'drvfs' ]; then
+    # File system max filename length.
+    __BU_MAIN_FS_MAX_FILENAME_LENGTH='255';
+
+    BU.ModuleInit.DisplayInitGlobalVarsInfos '__BU_MAIN_FS_MAX_FILENAME_LENGTH' "${__BU_MAIN_FS_MAX_FILENAME_LENGTH}" 'Int' \
+        "$(BU.Main.ModConfig.Filesystem.PrintFSLengthDescription 'drvfs')" \
+        "${__BU_MODULE_INIT_MSG__DISP_INIT_GLOB_VARS_INFO__IS_VAR_DEF_IN_INITIALIZER__MAIN_MODULE_CONF}" \
+        "${BASH_SOURCE[0]}" "${FUNCAME[0]}" "$(( LINENO - 2 ))";
+
+# -----------------------------------------------
+
 ## EXT2 FILE SYSTEM'S INFORMATIONS
 
 elif [ "${__BU_MAIN_FS_NAME,,}" == 'ext2' ]; then
